AE card collapsing, fixed CSS breakpoints, fixed first-search bug

--- a/src/app/indicator-sharing/indicator-sharing-list/indicator-sharing-list.component.scss
+++ b/src/app/indicator-sharing/indicator-sharing-list/indicator-sharing-list.component.scss
@@ -48,3 +48,21 @@
     margin-right: 6px;
   }
 }
+
+@media (min-width: 1500px) {
+  .filterOpenBreakpoint {
+    width: 80%;
+  }
+  .filterOpenBreakpoint {
+    margin-left: 10%;
+  }
+}
+
+@media (min-width: 1700px) {
+  .filterOpenBreakpoint {
+    width: 66.66666667%;
+  }
+  .filterOpenBreakpoint {
+    margin-left: 16.66666667%;
+  }
+}
